feat: add upload function
